k8slearn/9.Kubernetes 监控/9.6.PrometheusOperator/Manifest/kubernetesControlPlane-kubeControllerManager-Service.yaml
# kubernetesControlPlane-kubeControllerManager-Service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: kube-controller-manager
  labels:
    app.kubernetes.io/name: kube-controller-manager
spec:
  selector:
    component: kube-controller-manager
  ports:
    - name: https-metrics
      port: 10257
      targetPort: 10257 # controller-manager 的安全端口为10257
